--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,7 @@
       </button>
 
       <button>
-        <font size="5"><%= link_to "модели", mobile_phones_path %></font>
-      </button>
-
-      <button>
-        <font size="5"><%= link_to "производители", manufacturers_path %></font>
-      </button>
-
-      <button>
-        <font size="5"><%= link_to "цвета", colors_path %></font>
+        <font size="5"><%= link_to "Каталог", mobile_phones_path %></font>
       </button>
     </center>
 
