Add users page, add bootstrap form to: sign in, sign up, resed password

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,1 @@
-<mark><font size ="4"><b> Добро пожаловать: </b> <%= current_user.email %> </font></mark>
-<br>
-<br>
-
+<mark><font size ="4"><b> Добро пожаловать! </b> </font></mark>
