--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,12 @@
   color: #f5b60a;
   text-decoration: none;
 }
+
+
+.carousel-control-next-icon-black, .carousel-control-prev-icon-black {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: #1b1e218a no-repeat center center;
+  background-size: 70% 70%;
+}
