--- a/app/views/mobile_phones/show.html.erb
+++ b/app/views/mobile_phones/show.html.erb
@@ -1,3 +1,25 @@
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+  <%- @mobile_phone.mobile_phone_pictures.each.with_index do |mobile_phone_picture, index| %>
+    <div class="carousel-item <%= 'active' if index == 0 %>">
+      <%= image_tag mobile_phone_picture.picture.url(:medium), class: "d-block w-40" %>
+    </div>
+    <% end %>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon-black" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon-black" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <table class="table">
   <tbody>
     <tr>
