--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     </left>
+    <h1 class="cart-text"><%= render 'layouts/cart_text' %></h1>
     <div class="container">
     <%= yield %>
     </div>
