--- a/app/views/mobile_phones/show.html.erb
+++ b/app/views/mobile_phones/show.html.erb
@@ -55,5 +55,17 @@
   </tbody>
 </table>
 
-<%= link_to "назад", mobile_phones_path, class: "btn btn-dark" %>
+<%= form_for :order_mobile_phone, url: order_mobile_phones_path, method: :post, remote: true do |f| %>
+  <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency @mobile_phone.price, unit: 'BYN' %></span></h4>
+  <div class="input-group">
+    <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+    <div class="input-group-btn">
+      <%= f.hidden_field :mobile_phone_id, value: @mobile_phone.id %>
+      <%= f.select :color_id, @mobile_phone.colors.map { |p| [ p.name, p.id ] } %>
+      <%= f.submit "Add to Cart", class: "btn btn-primary" %>
+    </div>
+  </div>
 
+<% end %>
+
+<%= link_to "назад", mobile_phones_path, class: "btn btn-dark" %>
