--- a/app/views/mobile_phones/show.html.erb
+++ b/app/views/mobile_phones/show.html.erb
@@ -24,7 +24,7 @@
   <tbody>
     <tr>
       <td>Модель:</td>
-      <td><%= "#{@mobile_phone.manufacturer.name} #{@mobile_phone.name}" %></td>
+      <td><%= @mobile_phone.full_name %></td>
     </tr>
     <tr>
       <td>Флэш-память:</td>
