--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,5 +28,9 @@
       <th scope="row">Валюта:</th>
       <th scope="row"><%= current_user.currency.name %></th>
     </tr>
+    <tr>
+      <th scope="row">Роль:</th>
+      <th scope="row"><%= current_user.role.name %></th>
+    </tr>
   </tbody>
 </table>
