--- a/app/views/layouts/_cart_text.html.erb
+++ b/app/views/layouts/_cart_text.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "#{current_order.order_mobile_phones.size} Items in Cart ( #{number_to_currency current_order.subtotal} )", cart_path("me"), class: "btn btn-link" %>
+<%- units = current_user && current_user.currency ? current_user.currency.name : "BYN " %>
+
+<%= link_to "#{current_order.order_mobile_phones.size} Товаров в корзине ( #{number_to_currency current_order.subtotal, unit: units} )", cart_path("me"), class: "btn btn-primary" %>
