--- a/app/views/mobile_phones/show.html.erb
+++ b/app/views/mobile_phones/show.html.erb
@@ -1,26 +1,14 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
   <%- @mobile_phone.mobile_phone_pictures.each.with_index do |mobile_phone_picture, index| %>
-    <div class="carousel-item <%= 'active' if index == 0 %>">
-      <%= image_tag mobile_phone_picture.picture.url(:medium), class: "d-block w-40" %>
-    </div>
-    <% end %>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon-black" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon-black" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+    <%= image_tag mobile_phone_picture.picture.url(:medium), class: "rounded" %>
+  <% end %>
+  <br>
+
 <table class="table">
+  <thead>
+    <div>
+      <h4 class="badge badge-warning">Цена: <span><%= number_to_currency @mobile_phone.price, unit: 'BYN ' %></span></h4>
+    </div>
+  </thead>
   <tbody>
     <tr>
       <td>Модель:</td>
@@ -56,16 +44,23 @@
 </table>
 
 <%= form_for :order_mobile_phone, url: order_mobile_phones_path, method: :post, remote: true do |f| %>
-  <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency @mobile_phone.price, unit: 'BYN' %></span></h4>
-  <div class="input-group">
-    <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-    <div class="input-group-btn">
+
+  <div class="row">
+    <div class="col-2">
+      <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+    </div>
+    <div class="col-2">
       <%= f.hidden_field :mobile_phone_id, value: @mobile_phone.id %>
-      <%= f.select :color_id, @mobile_phone.colors.map { |p| [ p.name, p.id ] } %>
-      <%= f.submit "Add to Cart", class: "btn btn-primary" %>
+      <%= f.select :color_id, @mobile_phone.colors.map { |p| [ p.name, p.id ] }, {}, { class: "form-control" } %>
+    </div>
+    <div class="col-2">
+      <%= f.submit "Добавить в корзину", class: "btn btn-primary" %>
+    </div>
+    <div class="col-2">
+    <%= link_to "назад", mobile_phones_path, class: "btn btn-dark" %>
     </div>
   </div>
-
 <% end %>
+<br>
 
-<%= link_to "назад", mobile_phones_path, class: "btn btn-dark" %>
+
