Add button 'купить' to cart; add authenticate_user for buy from cart

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,7 +29,9 @@ html
       | &nbsp;
       span.cart-text
         = render 'layouts/cart_text'
+      br
       span.badge.badge-pill.badge-success = notice
-    p.alert = alert
+      span.badge.badge-pill.badge-success = alert
     .container
+      br
       = yield
