Add OrdersController and view index for orders

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Основная информация", user_path, class: "btn btn-warning" %>
 <%= link_to "Адреса", addresses_path, class: "btn btn-warning" %>
-<%= link_to "История заказов", user_path, class: "btn btn-warning" %>
+<%= link_to "История заказов", orders_path, class: "btn btn-warning" %>
 <br>
 <br>
 
