--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,27 +11,8 @@ html
     script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
   body
-    center
-      b
-        font size="7" Интернет магазин Pikcha
-    center
-      = link_to "На главную", root_path, class: "btn btn-warning"
-      | &nbsp;
-      = link_to "Каталог", mobile_phones_path, class: "btn btn-warning"
-      - if current_user.present?
-        | &nbsp;
-        = link_to "Личный кабинет", user_path("me"), class: "btn btn-warning"
-        | &nbsp;
-        = link_to "Выйти из личного кабинета", destroy_user_session_path, class: "btn btn-warning", :confirm => 'Вы уверены?', :method => :delete
-      - else
-        | &nbsp;
-        = link_to "Войти", new_user_session_path(current_user), class: "btn btn-warning"
-      | &nbsp;
-      span.cart-text
-        = render 'layouts/cart_text'
-      br
-      span.badge.badge-pill.badge-success = notice
-      span.badge.badge-pill.badge-success = alert
+    = render 'layouts/header'
     .container
       br
       = yield
+
