transform erb in slim, and new theme from 'Личный кабинет'

--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -1,4 +1,6 @@
 .shopping-cart
   = render "shopping_cart"
-
-  = link_to "Купить", carts_path, class: "btn btn-warning", method: :POST
+= form_tag carts_path, method: :POST
+  = select_tag :address_id, options_for_select(@addresses.map { |p| [ p.address_2, p.id ] }), include_blank: false
+br
+= submit_tag "купить", class: "btn btn-warning"
