--- a/app/views/carts/_cart_row.html.slim
+++ b/app/views/carts/_cart_row.html.slim
@@ -1,12 +1,12 @@
-table.table
-  = form_for order_mobile_phone, url: order_mobile_phone_path(order_mobile_phone), method: :patch, remote: true do |f|
+= form_for order_mobile_phone, url: order_mobile_phone_path(order_mobile_phone), method: :patch, remote: true do |f|
+  table.table [class="shopping-cart-item-#{order_mobile_phone.id}"]
     thead
       tr.bg-warning
         th scope="col"
           .panel.panel-primary
             .row
               .col-3
-                h4 = mobile_phone.full_name
+                h4 = order_mobile_phone.mobile_phone.full_name
               .col-3
                 - units = current_user && current_user.currency ? current_user.currency.name : "BYN "
                 h4.text
@@ -20,11 +20,11 @@ table.table
               = f.number_field :quantity, value: order_mobile_phone.quantity.to_i, class: "form-control", min: 1
             .col-2
               = f.select :color_id, order_mobile_phone.mobile_phone.colors.map { |p| [ p.name, p.id ] }, {}, { class: "form-control"}
-              = f.hidden_field :mobile_phone_id, value: mobile_phone.id
+              = f.hidden_field :mobile_phone_id, value: order_mobile_phone.mobile_phone.id
             .col-1
               = f.submit "Update", class: "btn btn-primary"
             .col-1
-              = link_to "Delete", order_mobile_phone_path(order_mobile_phone), { data: { confirm: "Are you sure you wish to delete the product '#{mobile_phone.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" }
+              = link_to "Delete", order_mobile_phone_path(order_mobile_phone), { data: { confirm: "Are you sure you wish to delete the product '#{order_mobile_phone.mobile_phone.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" }
             .col-4
               h4.text-right
                 | Total Price:
