--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -17,7 +17,7 @@ nav.navbar.navbar-expand-lg.navbar-dark style=("background-color: #343a40;")
         li.nav-item
           = link_to "Войти", new_user_session_path(current_user), class: "nav-link href"
     ul.nav.navbar-nav.navbar-right
-      li.nav-item
+      li.nav-item.cart-text
         = render 'layouts/cart_text'
     span.badge.badge-pill.badge-success = notice
     span.badge.badge-pill.badge-success = alert
