--- a/app/views/carts/_mobile_phone_total_price.html.slim
+++ b/app/views/carts/_mobile_phone_total_price.html.slim
@@ -1,2 +1,1 @@
-- units = current_user && current_user.currency ? current_user.currency.name : "BYN"
-= number_to_currency order_mobile_phone.total_price, unit: units
+= display_price order_mobile_phone.total_price
