--- a/app/views/mobile_phones/index.html.slim
+++ b/app/views/mobile_phones/index.html.slim
@@ -19,4 +19,4 @@ table.table
         td
           = mobile_phone.memory_storage
         td
-          = mobile_phone.price
+          = display_price mobile_phone.price
