--- a/app/views/layouts/_cart_text.html.slim
+++ b/app/views/layouts/_cart_text.html.slim
@@ -1,2 +1,6 @@
-- units = current_user && current_user.currency ? current_user.currency.name : "BYN "
-= link_to "#{current_order.order_mobile_phones.size} Товаров в корзине ( #{number_to_currency current_order.subtotal, unit: units} )", cart_path("me"), class: "nav-link href"
+= link_to  cart_path("me"), class: "btn btn-primary"
+  | Товаров в корзине:
+  | &nbsp
+  span.badge.badge-light
+    = current_order.quantity
+
