--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,8 @@ html
   body
     = render 'layouts/header'
     .container
+      span.badge.badge-pill.badge-success = notice
+      span.badge.badge-pill.badge-success = alert
       br
       = yield
 
