--- a/app/views/mobile_phones/show.html.slim
+++ b/app/views/mobile_phones/show.html.slim
@@ -5,9 +5,10 @@
 table.table
   thead
     div
-      h4.badge.badge-warning" Цена:
-        span
-          = number_to_currency @mobile_phone.price, unit: 'BYN '
+      h4.badge.badge-warning
+        | Цена:
+        | &nbsp;
+        = display_price @mobile_phone.price
   tbody
     tr
       td Модель:
@@ -39,10 +40,10 @@ table.table
     .col-2
       = f.hidden_field :mobile_phone_id, value: @mobile_phone.id
       = f.select :color_id, @mobile_phone.colors.map { |p| [ p.name, p.id ] }, {}, { class: "form-control" }
-    .col-2
+    .col-1
       = f.submit "Добавить в корзину", class: "btn btn-primary"
-    .col-2
-    = link_to "назад", mobile_phones_path, class: "btn btn-dark"
+br
+  = link_to "назад", mobile_phones_path, class: "btn btn-dark"
 br
 
 
