--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -23,10 +23,10 @@
             tbody
               - @orders.each do |order|
                 tr
-                  th = link_to order.id, order_path(order)
-                  th = order.address.address_1
-                  th = order.order_mobile_phones.size
-                  th = order.status
-                  th = order.currency.name
-                  th = order.subtotal
-                  th = order.created_at
+                  td = link_to order.id, order_path(order)
+                  td = order.address.address_1
+                  td = order.order_mobile_phones.size
+                  td = order.status
+                  td = order.currency.name
+                  td = order.subtotal
+                  td = order.created_at
